manifests/snac/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snac
spec:
  selector:
    app: snac
  ports:
    - { name: http, port: 8001, targetPort: http }
